# media_broadcast

./: .gitignore  CMakeLists.txt  LICENSE  README
ippa_client/: CMakeLists.txt  main.cpp
ippa_client_gui/: env.cpp  ippa_client_gui.pro  ippa_client_gui_ko_KR.ts  ippa_id.h  main.cpp  main.qml  main_control.cpp  main_control.h
ippa_client_gui/network/: broadcast.cpp  broadcast.h  client.cpp  client.h
ippa_gui/: env.h  ippa_gui.pro  ippa_gui_ko_KR.ts  main.cpp  main.qml  main_control.cpp  main_control.h
ippa_gui/network/: ControlMessage.cpp  ControlMessage.h  broadcast.cpp  broadcast.h  client.cpp  client.h
ippa_server/: CMakeLists.txt  main.cpp
script/client/: mic_broadcast  mic_broadcast_off
script/server/: mic_broadcast
util/: CMakeLists.txt  check_id.h  env.cpp  env.h
util/protocol/: protocol.cpp  protocol.h
